Fix help display on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -185,6 +185,7 @@
 }
 
 #help-block > p {
-  width: 700px;
-  max-width: 90%;
+  display: block;
+  margin: 0 auto;
+  max-width: 70%;
 }
